[tool.poetry]
name = "reddit_challenges"
version = "0.1.0"
description = "My completion of the r/dailyprogrammer challenges"
authors = ["Jay Shepherd <shepherdjay@users.noreply.github.com>"]
packages = [
    { include = "challenges"}
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
sympy = "^1.8"

[tool.poetry.dev-dependencies]
pytest >= 6.2.3
pytest-cov >= 2.11.1
hypothesis >= 6.10.1

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
